@@ -7,6 +7,13 @@ For more detailed instructions on filling in the ChangeLog form, see
 	* <changes go here...>
 
 *******************************************************************************
+post-6.0 release changes:
+
+2001-01-03  Kevin Layer  <layer@ultra>
+
+	* fi-subproc.el: added new fi:subprocess-max-buffer-lines
+
+*******************************************************************************
 2.1.3
 
 2000-10-21  Kevin Layer  <layer@ultra>
